# klogging

./: .gitignore  Android.mk  CMakeLists.txt  Makefile  README.md  VERSION
example/: Makefile  myprog.c  runmyprog.bat  runmyprog.sh
include/: klogging.h
src/: Makefile  klogging.cpp
